--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -7,7 +7,7 @@ primaryColor = '#FFC300'
 backgroundColor = '#0E1117'
 
 # Background color for sidebar and most interactive widgets
-secondaryBackgroundColor = '#262730
+secondaryBackgroundColor = '#262730'
 
 # Color used for almost all text
 textColor = '#FAFAFA'
